2010-06-23  Robert Larice
 * src/frontend/breakp.c,
 * src/frontend/com_let.c,
 * src/frontend/com_measure2.c,
 * src/frontend/com_sysinfo.c,
 * src/frontend/cpitf.c,
 * src/frontend/dotcards.c,
 * src/frontend/measure.c,
 * src/frontend/mw_coms.c,
 * src/frontend/mw_coms.h,
 * src/frontend/runcoms.c,
 * src/frontend/runcoms2.c,
 * src/frontend/where.c,
 * src/frontend/where.h,
 * src/include/cpextern.h,
 * src/include/fteext.h :
 ansi function definitions and declarations for the com_*() functions.
 remove some casts to NULL.
 several com_*() functions don't use their argument, add unused attribute later.

2010-06-22 Holger Vogt
 * b4soild.c: line 7598 double assignment of Cbg1 removed
 * configure.in, /visualc/include/config.h: version 21plus

============================ Rework-21 ==================================
2010-06-20 Holger Vogt
 * COPYING: further update to version 21

2010-06-20  Robert Larice
 * Makefile.am, configure.in, manual/Makefile.am:
 undo the manual inclusion, see "2010-06-13  Robert Larice"
  the manual is now a package of its own,
    cvs checkout ngspice/ng-spice-manual
    cd ng-spice-manual ; ./configure
    make dist     # for the tar ball, that is manual source plus pdf manual
    make install  # to install the pdf

2010-06-20 Holger Vogt
 * AUTHORS, INSTALL, COPYING, README: update to version 21

2010-06-19 Holger Vogt
 * inpdomod.c: refernces to not existing MOS levels 60, 61 deleted.
 
2010-06-19 Holger Vogt
 * subckt.c: line indentations
   com_measure2.c: remove bug, see support tracker no. 3013968
   inpcom.c: no braces around out_variable3 in
   .MEASURE {DC|AC|TRAN} result FIND out_variable WHEN out_variable2=out_variable3

2010-06-19  Robert Larice
 * ng-spice-rework/src/xspice/Makefile.am:
	exclude some junk from `make dist'
	  `make dist' and `make ; make dist'
	should yield the same tar-ball know
 * ng-spice-rework/src/xspice/cmpp/Makefile.am:
	fix missing dependencies to compute ifs_yacc.h and mod_yacc.h